# kepka

./: CMakeLists.txt
Telegram/SourceFiles/: application.cpp  application.h  config.cpp  logs.cpp  main.cpp  settings.cpp  settings.h
Telegram/SourceFiles/core/: launcher.cpp
Telegram/SourceFiles/mtproto/: auth_key.cpp  auth_key.h  config_loader.cpp  dc_options.cpp  mtp_instance.h  special_config_request.cpp
Telegram/SourceFiles/ui/effects/: cross_animation.cpp
